# svgparser

./: .gitignore  LICENSE  README.md  app.py  dtd_complex.xml  example.dtd  example.xml  example1.dtd  example1.xml  pyproject.toml  run.sh  setup.sh
bckup/buffer/: __init__.py  buffacc.py  buffcontr.py  buffunit.py  buffview.py  fragment.py
bckup/dtd/: __init__.py  defattr.py  dtdcore.py  valelem.py
bckup/tests/: conftest.py  temp.py
bckup/tests/dtd/attlist/: test_attlist_parse.py
bckup/tests/dtd/element/: test_match_targets.py  test_mixed_content.py  test_validate_all_targets.py
bckup/tests/test_xmlvalidator/: test_xmlvalidator_structure.py
bckup/tests/token/: test_token.py
bckup/xmlstruct/: attlist.py  attr.py  cdata.py  comment.py  doctype.py  element.py  entity.py  includeignore.py  instructions.py  notation.py  parsedtext.py  tag.py  xmldecl.py
examples/: dtd_reference.txt  example.py  example1.xml  exp1.dtd  main.dtd  module2.dtd
examples/dtd/: book.dtd  ent.dtd  ent1.dtd  ent2.dtd  example1.xml
src/: __init__.py  attlist.py  buffer_controller.py  dtd.py  errcl.py  errorcollector.py  parsev1.py  shared.py  svgparser.py  textbuffer.py  xmlparser.py  xmltoken.py  xmltokenizer.py  xmlvalidator.py
src/buffer/: __init__.py  shared.py  token.py
src/dtd/: __init__.py  defelem.py  dtdcore.py  dtdentity.py  struct.txt
src/old/: dtd.py  svgparser.py  svgparser_1.py  xmltoken.py  xmltokenizer.py
src/svgparser1/: svgparser.py
src/xmlstruct/: __init__.py  attlist.py  attliteral.py  cdata.py  comment.py  doctype.py  element.py  endtag.py  entity.py  entityliteral.py  includeignore.py  instructions.py  notation.py  parsedtext.py  pubidliteral.py  systemliteral.py  tag.py  text.py  xmldecl.py
src/xmltokens/: __init__.py  xmlchar.py  xmlcharref.py  xmlchars.py  xmlliteral.py  xmlmarkup.py  xmlproc.py
tests/: conftest.py  temp.py  test_helper_functions.py  test_svgreader.py
tests/create_xml/: test_create_simple_xml.py
tests/dtd/: test_element_match.py  test_resolve_entities.py
tests/dtd/attlist/: test_attlist_parse.py
tests/dtd/element/: test_available_targets.py  test_match_targets.py  test_mixed_content.py  test_validate_all_targets.py
tests/test_xmlvalidator/: test_xmlvalidator_structure.py
tests/textbuffer/: test_entity_replace.py  test_textbuffer.py
tests/tokens/: test_xmlchars.py
