[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlvalidator"
authors = [{ name = "Vladimir Jovanovic", email = "vladimirjo@protonmail.com" }]
description = """XML Validator."""
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "svg",
    "text",
    "string",
    "xml",
    "parse",
    "parser",
    "validate",
    "validator"
]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["bufferreader"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[project.optional-dependencies]
check = ["ruff", "mypy"]
test = ["pytest", "pytest-cov"]
build = ["build", "setuptools", "twine"]
dev = ["xmlvalidator[check, test, build]"]

[tool.ruff]
line-length = 120
extend-exclude = ["docs", "tests"]

[tool.ruff.lint]
select = ["D", "E", "F"]
extend-select = ["W", "C90", "I", "N", "B", "A", "C4", "PERF", "RUF"]
preview = true

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
